syntax = "proto3";
package SvPB;


message UUID //Guid-structure
{
  
  bytes guid = 1;
}

message MessageContainer //structure for a (error/warning/info-)message 
{
	int32 MessageCode = 1;
	int32 AdditionalTextId = 2;
	repeated string AdditionalTextList = 3;
	string CompileDate = 4;
	string CompileTime = 5;
	string FileName = 6;
	int32 FileLine = 7;
	string FileDateTime = 8;
	UUID ObjectId = 9;
}

message MessageContainerVector
{
	repeated MessageContainer Messages = 1;  //list of messages
}
